--- a/src/Blazor.Try.WebAssembly/wwwroot/index.html
+++ b/src/Blazor.Try.WebAssembly/wwwroot/index.html
@@ -26,6 +26,12 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script>
+        var require = { paths: { 'vs': 'https://cdn.masastack.com/npm/monaco-editor/0.34.1/min/vs' } };
+    </script>
+    <script src="https://cdn.masastack.com/npm/monaco-editor/0.34.1/min/vs/loader.js"></script>
+    <script src="https://cdn.masastack.com/npm/monaco-editor/0.34.1/min/vs/editor/editor.main.nls.js"></script>
+    <script src="https://cdn.masastack.com/npm/monaco-editor/0.34.1/min/vs/editor/editor.main.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
